# sqcr

./: Cargo.toml  LICENSE  README.md
migrations/: query.sql
src/: lib.rs  main.rs
