[package]
name = "sqcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.36.0", features = ["full"] }
